--- a/remarkable/package.json
+++ b/remarkable/package.json
@@ -23,6 +23,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tabs": "^6.0.0",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   }
